--- a/package.json
+++ b/package.json
@@ -22,7 +22,16 @@
     "generate": "stencil generate"
   },
   "dependencies": {
-    "@stencil/core": "^2.0.1"
+    "@stencil/core": "^2.0.1",
+    "@stencil/sass": "^1.3.2",
+    "classnames": "^2.2.6"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "@types/jest": "^26.0.14",
+    "@types/puppeteer": "^3.0.1",
+    "jest": "^26.4.2",
+    "jest-cli": "^26.4.2",
+    "puppeteer": "^5.2.1"
+  }
 }
