--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "skeleton-webcomponent-loader",
   "version": "0.0.1",
-  "description": "Stencil Component Starter",
+  "description": "Skeleton loader webcomponent developed in stencil.js",
   "main": "dist/index.cjs.js",
   "module": "dist/custom-elements/index.js",
   "es2015": "dist/esm/index.mjs",
