--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   "collection": "dist/collection/collection-manifest.json",
   "collection:main": "dist/collection/index.js",
   "unpkg": "dist/skeleton/skeleton.js",
+  "engines": {
+    "node": ">=12"
+  },
   "files": [
     "dist/",
     "loader/"
@@ -22,6 +25,11 @@
     "generate": "stencil generate",
     "prepublish": "npm run build"
   },
+  "config": {
+    "commitizen": {
+      "path": "cz-conventional-changelog"
+    }
+  },
   "dependencies": {
     "@stencil/core": "^2.0.1",
     "@stencil/sass": "^1.3.2",
@@ -31,8 +39,12 @@
   "devDependencies": {
     "@types/jest": "^26.0.14",
     "@types/puppeteer": "^3.0.1",
+    "commitizen": "^4.2.1",
+    "cz-conventional-changelog": "^3.3.0",
     "jest": "^26.4.2",
     "jest-cli": "^26.4.2",
+    "prettier": "^2.1.2",
+    "pretty-quick": "^3.1.0",
     "puppeteer": "^5.2.1"
   }
 }
