--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "test": "stencil test --spec --e2e",
     "test.watch": "stencil test --spec --e2e --watchAll",
     "generate": "stencil generate",
-    "prepublish": "npm run build"
+    "prepublish": "npm run build",
+    "commit": "npx git-cz"
   },
   "config": {
     "commitizen": {
