--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "skeleton-webcomponent-loader",
-  "version": "0.0.3",
+  "version": "1.0.0",
   "description": "Skeleton loader webcomponent developed in stencil.js",
   "main": "dist/index.cjs.js",
   "module": "dist/custom-elements/index.js",
@@ -47,5 +47,9 @@
     "prettier": "^2.1.2",
     "pretty-quick": "^3.1.0",
     "puppeteer": "^5.2.1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "github:nikbabchenko/skeleton-webcomponent"
   }
 }
