--- a/package.json
+++ b/package.json
@@ -33,8 +33,7 @@
   },
   "dependencies": {
     "@stencil/core": "^2.0.1",
-    "@stencil/sass": "^1.3.2",
-    "classnames": "^2.2.6"
+    "@stencil/sass": "^1.3.2"
   },
   "license": "MIT",
   "devDependencies": {
@@ -51,5 +50,9 @@
   "repository": {
     "type": "git",
     "url": "github:nikbabchenko/skeleton-webcomponent"
-  }
+  },
+  "homepage": "https://skeleton-webcomponent-loader.web.app",
+  "keywords": [
+    "skeleton", "skeleton-component", "webcomponent", "ghost", "ghost component", "skeleton webcomponent", "skeleton loader", "loader"
+  ]
 }
