--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "skeleton-webcomponent-loader",
-  "version": "1.0.3",
+  "version": "2.0.0",
   "description": "Skeleton loader webcomponent developed in stencil.js",
   "main": "dist/index.cjs.js",
   "module": "dist/custom-elements/index.js",
@@ -24,7 +24,8 @@
     "test.watch": "stencil test --spec --e2e --watchAll",
     "generate": "stencil generate",
     "prepublish": "npm run build",
-    "commit": "npx git-cz"
+    "commit": "npx git-cz",
+    "release": "standard-version"
   },
   "config": {
     "commitizen": {
@@ -45,7 +46,8 @@
     "jest-cli": "^26.4.2",
     "prettier": "^2.1.2",
     "pretty-quick": "^3.1.0",
-    "puppeteer": "^5.2.1"
+    "puppeteer": "^5.2.1",
+    "standard-version": "^9.0.0"
   },
   "repository": {
     "type": "git",
@@ -53,6 +55,13 @@
   },
   "homepage": "https://skeleton-webcomponent-loader.web.app",
   "keywords": [
-    "skeleton", "skeleton-component", "webcomponent", "ghost", "ghost component", "skeleton webcomponent", "skeleton loader", "loader"
+    "skeleton",
+    "skeleton-component",
+    "webcomponent",
+    "ghost",
+    "ghost component",
+    "skeleton webcomponent",
+    "skeleton loader",
+    "loader"
   ]
 }
